typescript/checker/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration6.ts.stderr
error: TS1009
 --> $DIR/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration6.ts:1:4
  |
1 | var
  |    ^

